- Résolution d'un bug d'affichage sur iPad paysage dans la section formation où les blocs se chevauchaient et se plaçaient mal. - Le texte de l'adresse email dans la section de contact (ContactCTA) était trop collé à l'icône de la boîte aux lettres. - J'ai ajouté un espacement (gap) via CSS et un espace dans le code HTML pour décaler le texte vers la droite.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -308,6 +308,9 @@ h5 {
 .gap-10 {
 	gap: 2.5rem;
 }
+.gap-12 {
+	gap: 3rem;
+}
 .gap-15 {
 	gap: 3.75rem;
 }
@@ -333,6 +336,9 @@ h5 {
 	}
 	.lg\:gap-10 {
 		gap: 2.5rem;
+	}
+	.lg\:gap-12 {
+		gap: 3rem;
 	}
 	.lg\:gap-15 {
 		gap: 3.75rem;
